fixed images layout issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -249,8 +249,6 @@ a.launchProjectButton:hover {
    }
 
    .lastName {
-      /*transform: rotate(-90deg);
-      font-size: 55px;*/
       font-size: 50px;
       position: relative;
       top: 7rem;
@@ -316,6 +314,10 @@ h1 {
       margin: auto;
       width: 70%;
       }
+   
+   a.homePageProjectLink {
+      font-size: 15px;
+   }
 }
 
 @media (max-width: 400px) {
@@ -338,5 +340,9 @@ h1 {
       h3 {
         font-size: 15px; 
         font-weight: 400;
+      }
+
+      a.homePageProjectLink {
+         font-size: 20px;
       }
 }
